[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/ResourceProp.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Test Scenes/AlertBalloon.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 136.0

[node name="ResourceProp" type="Area2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Outline" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1.52588e-05, 1.52588e-05 )
scale = Vector2( 1.1875, 1.1875 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = -32.0
margin_top = -64.0
margin_right = 32.0
margin_bottom = -50.0
text = "ahoy"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlertBalloon" parent="." instance=ExtResource( 3 )]
position = Vector2( 1.14578, -0.183838 )
[connection signal="area_entered" from="." to="." method="_on_ResourceProp_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_ResourceProp_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_Area2D_body_exited"]
